[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.21"
serde = "1.0.163"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
kafka= "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }