[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka ="0.31.0"
actix-web = "4.3.1"
serde = "1.0.163"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = "1.x"
async-std = { version = "1", features = ["attributes", "tokio1"] }
env_logger = "0.10.0"
chrono = { version = "0.4.19", features = ["serde"] }